--- a/assets/bootstrap/css/bootstrap.css
+++ b/assets/bootstrap/css/bootstrap.css
@@ -1,3 +1,4 @@
+@@ -0,0 +1,6760 @@
 /*!
  * Bootstrap v3.3.6 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
@@ -10,6 +11,7 @@ html {
       -ms-text-size-adjust: 100%;
 }
 body {
+  padding-top: 50px;
   margin: 0;
 }
 article,
@@ -1226,6 +1228,10 @@ h3,
   margin-top: 20px;
   margin-bottom: 10px;
 }
+.h1first {
+  margin-top: 0px;
+  margin-bottom: 10px;
+}
 h1 small,
 .h1 small,
 h2 small,
@@ -1288,7 +1294,7 @@ h6,
   font-size: 12px;
 }
 p {
-  margin: 0 0 10px;
+  margin: 0 0 0px;
 }
 .lead {
   margin-bottom: 20px;
@@ -1604,8 +1610,8 @@ pre code {
   }
 }
 .container-fluid {
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 225px;
+  padding-left: 250px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -3457,6 +3463,8 @@ fieldset[disabled] .btn-link:focus {
 }
 .btn-block {
   display: block;
+  color: white;
+  background-color: rgb(52, 122, 182);
   width: 100%;
 }
 .btn-block + .btn-block {
@@ -3986,11 +3994,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a {
   position: relative;
   display: block;
-  padding: 10px 15px;
+  padding: 10px 13px;
 }
 .nav > li > a:hover,
 .nav > li > a:focus {
-  text-decoration: none;
+  text-decoration: underline;
   background-color: #eee;
 }
 .nav > li.disabled > a {
@@ -4489,10 +4497,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
   .navbar-right {
     float: right !important;
-    margin-right: -15px;
+    margin-right: -8px;
   }
   .navbar-right ~ .navbar-right {
-    margin-right: 0;
+    margin-right: -15px;
   }
 }
 .navbar-default {
